[CSRS-303] - upload attachments
