# src/backend/Csrs.Api/Controllers/FileController.cs
@@ -1,6 +1,7 @@
 ﻿using Csrs.Api.Features.Files;
 using Csrs.Api.Models;
 using MediatR;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
 using System.ComponentModel.DataAnnotations;
 using System.Net;
@@ -53,5 +54,17 @@ namespace Csrs.Api.Controllers
 
             return Array.Empty<FileToCreate>();
         }
+
+        [AllowAnonymous]
+        [HttpPost("UploadAttachment")]
+        [ProducesResponseType((int)HttpStatusCode.OK)]
+        public async Task<IActionResult> UploadAttachmentAsync([Required] Guid fileId,[Required] IFormFile file,[Required] string type)
+        {
+            //ListApplications.Request request = new();
+            //ListApplications.Response response = await _mediator.Send(request);
+
+            return Ok();
+        }
+
     }
 }
